feat: atualizando api