@@ -5,11 +5,11 @@ import com.skill.kairo.domain.model.challenge.Score;
 import com.skill.kairo.domain.repository.InteractionRepository;
 import com.skill.kairo.infrastructure.adapter.out.persistence.jpa.InteractionEntity;
 import com.skill.kairo.infrastructure.adapter.out.persistence.jpa.SpringDataInteractionRepository;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Repository
 public class JpaInteractionRepositoryAdapter implements InteractionRepository {
@@ -22,31 +22,30 @@ public class JpaInteractionRepositoryAdapter implements InteractionRepository {
 
     @Override
     public void save(Interaction interaction) {
-        // Traduz do Domínio Puro para o JPA Entity
-        InteractionEntity entity = new InteractionEntity(
+        springDataRepository.save(new InteractionEntity(
                 interaction.getId(),
                 interaction.getUserId(),
                 interaction.getChallengeId(),
                 interaction.getUserInput(),
                 interaction.getAiResponse(),
-                interaction.getScore().value(), // Extrai o valor do Value Object Score
+                interaction.getScore().value(),
                 interaction.getCreatedAt()
-        );
-        springDataRepository.save(entity);
+        ));
     }
 
     @Override
-    public List<Interaction> findByUserId(UUID userId) {
-        // Busca do JPA e traduz de volta para o Domínio Puro
-        return springDataRepository.findByUserIdOrderByCreatedAtDesc(userId).stream()
+    public List<Interaction> findByUserId(UUID userId, int page, int size) {
+        return springDataRepository
+                .findByUserIdOrderByCreatedAtDesc(userId, PageRequest.of(page, size))
+                .stream()
                 .map(entity -> new Interaction(
                         entity.getId(),
                         entity.getUserId(),
                         entity.getChallengeId(),
                         entity.getUserInput(),
                         entity.getAiResponse(),
-                        new Score(entity.getScore()) // Recria o Value Object Score
+                        new Score(entity.getScore())
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
